--- a/big-five.Rmd
+++ b/big-five.Rmd
@@ -10,6 +10,7 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
+library(nortest)
 ```
 
 
@@ -21,8 +22,81 @@ head(bigfive)
 ```
 
 
+
+## Testiranje razlika u otvorenosti kod mladih i starih ispitanika
+
 ```{r}
 
+cat('Medijan godina svih ispitanika je ', median(bigfive$age),'\n')
+
+old_subjects = bigfive[bigfive$age >= 60 ,]
+young_subjects = bigfive[bigfive$age <= 30 ,]
+
+cat('Srednja vrijednost otvorenosti za mlade ( <= 30 godina ) ispitanike je ', mean(young_subjects$openness_score), '\n')
+cat('Srednja vrijednost otvorenosti za stare ( >= 60 godina ) ispitanike je ', mean(old_subjects$openness_score), '\n')
+cat('Varijanca otvorenosti za mlade ( <= 30 godina ) ispitanike je ', var(young_subjects$openness_score), '\n')
+cat('Varijanca otvorenosti za stare ( >= 60 godina ) ispitanike je ', var(old_subjects$openness_score), '\n')
+
+boxplot(old_subjects$openness_score, young_subjects$openness_score, 
+        names = c('Older subjects\' openness score','Younger subjects\' openness score'),
+        main='Boxplot of younger and older subjects\' openness score')
+
+
+hist(bigfive$openness_score,main='Openness score histogram',xlab='Value',ylab='Frequency', breaks=100)
 
 
 ```
+
+# Normalnost podataka - grafovi
+```{r}
+
+hist(old_subjects$openness_score,main='Openness score old subjects histogram',xlab='Value',ylab='Frequency', breaks=100)
+hist(young_subjects$openness_score,main='Openness score young subjects histogram',xlab='Value',ylab='Frequency', breaks=100)
+
+qqnorm(old_subjects$openness_score, pch = 1, frame = FALSE,main='Older subjects')
+qqline(old_subjects$openness_score, col = "steelblue", lwd = 2)
+
+qqnorm(young_subjects$openness_score, pch = 1, frame = FALSE,main='Younger subjects')
+qqline(young_subjects$openness_score, col = "steelblue", lwd = 2)
+
+```
+
+
+# Testiranje normalnosti - Lillieforsova inačica Koglomorov-Smirnovljevog testa
+
+
+Testiranje normalnosti otvorenosti za starije ispitanike
+```{r}
+lillie.test(old_subjects$openness_score)
+```
+
+Testiranje normalnosti faktora otvorenosti za mlađe ispitanike
+```{r}
+lillie.test(young_subjects$openness_score)
+```
+
+# Testiranje jednakosti varijanci otvorenosti za stare i mlade ispitanike
+
+Testiranje jednakosti varijanci provodi se F testom. Pretpostavlja se nezavisnost uzoraka.
+
+Hipoteze:
+
+$$H_0: \sigma^2_{old} = \sigma^2_{young}  \\ H_1: \sigma^2_{old} \neq \sigma^2_{young}  $$
+```{r}
+var.test(old_subjects$openness_score, young_subjects$openness_score)
+```
+S obzirom da je p-vrijednost = ____ odbacujemo hipotezu \(H_0 : \sigma^2_{old} = \sigma^2_{young} \) u korist alternativne hipoteze \( H_1: \sigma^2_{old} \neq \sigma^2_{young} \). Zaključujemo da podatci govore u prilog alternativnoj hipotezi i u testovima koji slijede koristit će se informacija o nejednakosti varijanci dobivena ovim testom.
+
+# Testiranje jednakosti srednjih vrijednosti otvorenosti za stare i mlade ispitanike
+
+Testiranje jednakosti srednjih vrijednosti otvorenosti za stare i mlade ispitanike provodi se kao T test za podatke s različitim varijancama. Pretpostavlja se nezavisnost uzoraka.
+
+Hipoteze:
+
+$$H_0: \mu_{old} = \mu_{young}  \\ H_1: \mu_{old} \neq \mu_{young}  $$
+
+```{r}
+t.test(old_subjects$openness_score, young_subjects$openness_score, alt = "two.sided", var.equal = FALSE)
+
+```
+p-vrijednost je manja od 0.05, stoga se hipoteza \( H_0: \mu_{old} = \mu_{young} \) odbacuje u korist alternativne hipoteze \(H_1: \mu_{old} \neq \mu_{young}  \)
